# clip-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  minutes_vector_db.npz  pyproject.toml  secrets.json  summary_vector_db.npz.REMOVED.git-id
.github/: pull_request_template.md
.github/workflows/: main.yml
accounts/: authenticate.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_groups_customuser_name_and_more.py  0003_alter_customuser_name.py  0004_alter_customuser_name.py
app/: asgi.py  settings.py  urls.py
docs/: pull_request_template.md
meetings/: consumers.py  models.py  routing.py  serializers.py  summary_vector_db.npz  urls.py  views.py
meetings/migrations/: 0001_initial.py  0002_remove_meeting_is_paused_alter_meeting_end_time_and_more.py  0003_remove_meetingparticipant_has_joined.py  0004_meeting_save_minutes.py  0005_meeting_creator.py  0006_alter_meeting_creator_alter_meeting_is_active.py  0007_alter_meeting_is_active.py  0008_alter_meeting_is_active.py  0009_remove_section_start_time.py  0010_alter_meeting_creator.py
organizations/: models.py  serializers.py  urls.py  views.py
organizations/migrations/: 0001_initial.py
pretrained_models/spkrec-xvect-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
