[tool.poetry]
name = "clip-backend"
version = "0.1.0"
description = ""
authors = ["NOne"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-environ = "^0.11.2"
psycopg2 = "^2.9.10"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.8"
flex = "^6.14.1"
django-cors-headers = "^4.6.0"
channels = "^4.2.0"
channels-redis = "^4.2.1"
daphne = "^4.1.2"
pytz = "^2024.2"
celery = "^5.4.0"
django-background-tasks = "^1.2.8"
pydub = "^0.25.1"
simple-diarizer = "^0.0.13"
numpy = "^2.0.0"
soundfile = "^0.12.1"
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
nemo-toolkit = "^2.0.0"
speechrecognition = "^3.11.0"
hydra-core = "^1.3.2"
pytorch-lightning = "^2.4.0"
lhotse = "^1.28.0"
einops = "^0.8.0"
transformers = "^4.46.3"
jiwer = "^3.0.5"
editdistance = "^0.8.1"
pyannote-audio = "^3.3.2"
webdataset = "^0.2.100"
datasets = "^3.1.0"
openai = "^1.55.3"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
